--- a/Packages/com.vrchat.demo-template/package.json
+++ b/Packages/com.vrchat.demo-template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.monadoart.monadoart.brp-stencildebugtools",
+  "name": "com.monadoart.brp-stencildebugtools",
   "displayName": "Monado_Art StencilTools",
   "version": "0.0.1",
   "unity": "2022.3",
