--- a/Packages/.gitignore
+++ b/Packages/.gitignore
@@ -2,4 +2,4 @@
 !com.vrchat.core.*
 
 # Change this to match your new package name
-!monadoart.brp-stencildebugtools 
+!com.monadoart.brp-stencildebugtools 
