--- a/Packages/com.monadoart.brp-stencildebugtools/package.json
+++ b/Packages/com.monadoart.brp-stencildebugtools/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.monadoart.brp-stencildebugtools",
-  "displayName": "Monado_Art StencilTools",
-  "version": "0.0.2",
+  "displayName": "MekenoVRC Stencil Tools",
+  "version": "0.0.3",
   "unity": "2022.3",
   "description": "Set of tools for testing Stencil setups",
   "vrchatVersion": "2022.1.1",
